@@ -1,4 +1,8 @@
 2008-11-06: Jason Long <jlong@messiah.edu>
+ * t/verifier.t: use a "fake" dns implementation, so that this test
+   will pass no matter the user's state of dns
+
+2008-11-06: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/DNS.pm (query): changed API so that it now returns
    a list of Net::DNS::RR objects, rather than a Net::DNS::Packet object.
  * lib/Mail/DKIM/Policy.pm: update for the change to the DNS.pm api.
